// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 11111,
        "title": "Adidas running shoes - men",
      },
      "quantity": 5,
    },
    {
      "product": {
        "price": 22222,
        "title": "Adidas running shoes - men",
      },
      "quantity": 3,
    },
  ],
  "total": 122221,
}
`;

exports[`Cart checkout() should return an object with the total the list of items when summary() is called 1`] = `
{
  "formatted": "R$1,222.21",
  "items": [
    {
      "product": {
        "price": 11111,
        "title": "Adidas running shoes - men",
      },
      "quantity": 5,
    },
    {
      "product": {
        "price": 22222,
        "title": "Adidas running shoes - men",
      },
      "quantity": 3,
    },
  ],
  "total": 122221,
}
`;
